add: getAll() test to DriverServiceImpl